Name:               namegen
Version:            1.0.0
Synopsis:           Generate strings that sound like names
License:            MIT
Author:             Ben Foppa
Homepage:           https://github.com/RobotGymnast/namegen
Maintainer:         benjamin.foppa@gmail.com
Build-Type:         Simple
Cabal-Version:      >= 1.9.2

Executable namegen
    hs-source-dirs:    src/
    ghc-options:       -Wall -Werror -threaded -rtsopts=all
    main-is:           Main.hs

    build-depends: 
                    basic-prelude == 0.3.8.*,
                    extensible-effects == 1.4.*,
                    system-random-effect == 0.4.*,
                    base == 4.*

source-repository head
  type: git
  location: https://github.com/RobotGymnast/namegen
